--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -4,7 +4,7 @@
 ~\\[4cm]
 \begin{center}\forallxadl \end{center}\end{titlingpage}
 
-\newpage \thispagestyle{empty}
+\newpage \thispagestyle{empty} ~\\
 ~\\[2cm]
 \noindent \makebox[6cm]{\begin{minipage}{7cm}
 	 \begin{flushright}
@@ -22,7 +22,6 @@
 
 {P.D.\ Magnus}\\
 \emph{University at Albany, State University of New York}
-
 \newpage \thispagestyle{empty} ~\\
 \copyright\ \ifthenelse{\year=2005}{\number\year}{2005–\number\year} by Antony Eagle, Tim Button and P.D.\ Magnus. Some rights reserved.
 
