--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -787,7 +787,7 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 \renewcommand{\thechapter}{\arabic{chapter}} %TB: sections (which LaTeX regards as chapters) to be numbered
 \renewcommand{\thesection}{\arabic{chapter}.\arabic{section}} %TB: subsections (which LaTeX regards as sections) to be n.m
 \definecolor{liigray}{gray}{0.95} % Æ: used to color background factoidbox in  gray
-\definecolor{orange}{rgb}{0.8,0.4,0.2} % Æ: used to color links in orange
+\definecolor{orange}{HTML}{CC6633} % Æ: used to color links in orange
 \newcommand\myanswer[1]{\textcolor{blue}{#1}} % TB: puts model answers in blue
 
 \chapterstyle{madsen} % Æ choice
